samples/_failures_safe/1761436729_7282df_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_86534b38.c: In function ‘main’:
./samples/SAFE/__tmp_86534b38.c:164:14: error: expected ‘)’ at end of input
  164 |     if (scanf
      |        ~     ^
      |              )
./samples/SAFE/__tmp_86534b38.c:164:5: error: expected declaration or statement at end of input
  164 |     if (scanf
      |     ^~
